--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,37 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/main.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body>
+  <section id="sideMenu">
+    <nav>
+      <h2 class="nav-title">GoJobs</h2>
+      <a href="#" class="active"><i class="fa fa-home"></i>Home</a>
+      <a href="#"><i class="fa fa-sticky-note"></i>Item</a>
+      <a href="#"><i class="fa fa-bookmark"></i>Item</a>
+      <a href="#"><i class="fa fa-calendar-check-o"></i>Item</a>
+      <a href="#"><i class="fa fa-user-circle"></i>Item</a>
+      <a href="#"><i class="fa fa-cog"></i>Item</a>
+    </nav>
+  </section>
 
+  <header>
+    <div class="search-area">
+      <i class="fa fa-search"></i>
+      <input type="text" name="" value="">
+    </div>
+    <div class="user-area">
+      <a href="#">+ add</a>
+      <a href="#"><i class="fa fa-bell"></i><span>3</span></a>
+      <a href="#">
+        <div class="user-img"></div>
+        <i class="fa fa-caret-down"></i>
+      </a>
+    </div>
+  </header>
 </body>
 
 </html>
