--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
       <input type="text" name="" value="">
     </div>
     <div class="user-area">
-      <a href="#">+ add</a>
-      <a href="#"><i class="fa fa-bell"></i><span>3</span></a>
+      <a href="#" class="add">+ Add</a>
+      <a href="#" class="notification">
+        <i class="fa fa-bell"></i><span class="circle">3</span>
+      </a>
       <a href="#">
         <div class="user-img"></div>
         <i class="fa fa-caret-down"></i>
