--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,54 @@
       </a>
     </div>
   </header>
+  <section id="content-area">
+    <div class="heading">
+      <h1>Dashboard</h1>
+      <p>Welcome to Go Jobs</p>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <div class="user-img"></div>
+        <span class="user-name">John Levis</span>
+        <span class="user-title">Full-Stack Developer</span>
+        <hr>
+        <div class="col-md-4">
+          <span class="education">Education</span>
+        </div>
+        <div class="col-md-4">
+          <span class="schools">Federal Way IT School</span>
+          <span class="schools">Washington University</span>
+        </div>
+      </div>
+      <div class="card">
+        <h6>Interview Schedule</h6>
+        <span class="date">
+          July 21, 2018
+        </span>
+        <div class="col-md-2">
+          <span class="job-type">IT</span>
+        </div>
+        <div class="col-md-10">
+          <span class="job">Best Buy HQ</span>
+          <span class="position">Sr. Developer</span>
+          <span class="time">9:30 am</span>
+        </div>
+      </div>
+    </div>
+    <table>
+      <thead>
+        <tr>
+          <th>
+
+          </th>
+        </tr>
+      </thead>
+
+      <tbody>
+
+      </tbody>
+    </table>
+  </section>
 </body>
 
 </html>
