--- a/public/index.html
+++ b/public/index.html
@@ -45,45 +45,60 @@
       <p>Welcome to Go Jobs</p>
     </div>
     <div class="cards">
-      <div class="card">
+
+      <div class="card col-md-4">
         <div class="user-img"></div>
         <span class="user-name">John Levis</span>
         <span class="user-title">Full-Stack Developer</span>
         <hr>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <span class="education">Education</span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-9">
           <span class="schools">Federal Way IT School</span>
-          <span class="schools">Washington University</span>
+          <span class="schools">Washington University, IT</span>
         </div>
       </div>
-      <div class="card">
-        <h6>Interview Schedule</h6>
-        <span class="date">
-          July 21, 2018
-        </span>
-        <div class="col-md-2">
-          <span class="job-type">IT</span>
-        </div>
-        <div class="col-md-10">
-          <span class="job">Best Buy HQ</span>
-          <span class="position">Sr. Developer</span>
-          <span class="time">9:30 am</span>
+      <div class="col-md-4">
+        <div class="card">
+          <h6>Interview Schedule</h6>
+          <span class="date">
+            July 21, 2018
+          </span>
+          <div class="col-md-2">
+            <span class="job-type">IT</span>
+          </div>
+          <div class="col-md-10">
+            <span class="schools">Best Buy HQ</span>
+            <span class="schools">Sr. Developer</span>
+            <span class="time">9:30 am</span>
+          </div>
         </div>
       </div>
+
     </div>
     <table>
       <thead>
         <tr>
           <th>
-
+            Company
+          </th>
+          <th>
+            Jobs
+          </th>
+          <th>
+            LOCATION
           </th>
         </tr>
       </thead>
 
       <tbody>
-
+        <tr>
+          <td>Online Shopping</td>
+          <td>Java Developer</td>
+          <td>July 28, 2018</td>
+          <td>Los Angeles, Ca</td>
+        </tr>
       </tbody>
     </table>
   </section>
