second card added

--- a/public/index.html
+++ b/public/index.html
@@ -46,22 +46,25 @@
     </div>
     <div class="cards">
 
-      <div class="card col-md-4">
-        <div class="user-img"></div>
-        <span class="user-name">John Levis</span>
-        <span class="user-title">Full-Stack Developer</span>
-        <hr>
-        <div class="col-md-3">
-          <span class="education">Education</span>
-        </div>
-        <div class="col-md-9">
-          <span class="schools">Federal Way IT School</span>
-          <span class="schools">Washington University, IT</span>
+      <div class="card col-sm-8 col-md-4 col-lg-6">
+        <div class="card">
+          <div class="user-img"></div>
+          <span class="user-name">John Levis</span>
+          <span class="user-title">Full-Stack Developer</span>
+          <hr>
+          <div class="col-md-3">
+            <span class="education">Education</span>
+          </div>
+          <div class="col-md-9">
+            <span class="schools">Federal Way IT School</span>
+            <span class="schools">Washington University, IT</span>
+          </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-4 col-md-4 col-lg-6">
         <div class="card">
           <h6>Interview Schedule</h6>
+          <p>&#8943;</p>
           <span class="date">
             July 21, 2018
           </span>
@@ -69,14 +72,14 @@
             <span class="job-type">IT</span>
           </div>
           <div class="col-md-10">
-            <span class="schools">Best Buy HQ</span>
-            <span class="schools">Sr. Developer</span>
+            <span class="location">Best Buy HQ</span>
+            <span class="position">Sr. Developer</span>
             <span class="time">9:30 am</span>
           </div>
         </div>
       </div>
-
     </div>
+
     <table>
       <thead>
         <tr>
